--- a/index.html
+++ b/index.html
@@ -176,14 +176,7 @@
                 llamadas bisemanales, aprenderás
                 directamente de expertos de la industria
                 sobre temas que van desde contratos hasta
-                estrategias de ventas.
-                Sabemos que nuestro broker, EXP Realty,
-                ofrece excelentes beneficios en cuanto a
-                soporte, guía y compliance. Sin embargo,
-                entendemos que puede ser abrumador
-                navegar entre tantas opciones y que es fácil
-                perderse al necesitar dirigirse a algún
-                departamento en específico.</p>
+                estrategias de ventas.</p>
             </div>
             <div class="container-0005 with-border">
               <img src="./static/imgs/icono7.png" alt="team-icon">
