--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
                 <img src="./static/imgs/2 Isotype White.png" alt="OTG LOGO">
             </div>
             <div class="nav-1111-right">
-                <a href="#about">Marketing</a>
-                <a href="#benefits">Transacciones</a>
-                <a href="#testimonials">Documentos</a>
+              <a href="#squad">OTG Squad</a>
+                <a href="#marketing">OTG Marketing</a>
+                <a href="#listings">OTG Listings</a>
+                <a href="#skyslope">Documentos</a>
                 <a href="#splits">Team Meetings</a>
             </div>
         </nav>
@@ -194,6 +195,72 @@
                 transacciones.</p>
             </div>
           </div>
+        </section>
+        <section class="sec-6" id="marketing">
+          <form id="contactForm"  class="contactForm blue">
+            <h3 class="opacity-change">Crea tu propio Signature</h3>
+            <p>Acá va un copy</p>
+            <div class="form-fields"> 
+                <div class="form-q f50">
+                    <label for="firstname">Nombre:</label>
+                    <input type="text" id="firstname" name="firstname">
+                </div>
+                <div class="form-q f50">
+                    <label for="lastname">Apellido:</label>
+                    <input type="text" id="lastname" name="lastname">
+                </div>
+                <div class="form-q f50">
+                    <label for="tel">Teléfono:</label>
+                    <input type="tel" id="tel" name="tel">
+                </div>
+                <div class="form-q f50">
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email">
+                </div>
+                <div class="form-q f50">
+                  <label for="website">Página web:</label>
+                  <p>* si cuentas con una. De no ser así, se coloca la web de OTG. </p>
+                  <input type="website" id="website" name="website">
+                </div>
+                <div class="form-q f50">
+                  <label for="socialmedia">Redes Sociales: (opcional)</label>
+                  <input type="socialmedia" id="socialmedia" name="socialmedia" placeholder="Ejm: @oscarterangroup">
+                </div>
+            </div>
+            <p id="responseMessage" style="display:none; color: red;">** Proporciona un teléfono o email para continuar.</p>  
+            <button class="otg-button-111" type="submit">Enviar al equipo de Marketing</button>
+          </form>
+        </section>
+        <section class="sec-6 with-otg-bg" id="squad">
+          <span class="bullets">OTG SQUAD</span>
+          <div class="sec-6-container">
+            <h3>Prueba nuestro OTG-GPT</h3>
+            <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vel turpis neque. Suspendisse aliquet tristique leo sed efficitur. Nunc scelerisque leo eu nisi volutpat pretium.</p>
+            <img src="./static/imgs/openai-icon.png" alt="openai-logo">
+            <button class="otg-button-111" type="submit">Ver Ahora</button>
+          </div>
+          <form id="contactForm1" class="contactForm blue">
+            <h3 class="opacity-change">Únete a nuestros grupos de WhatsApp</h3>
+            <p>Solo debes completar el siguiente formulario:</p>
+            <div class="all-form-fields">
+              <div class="form-fields"> 
+                  <div class="form-q f50">
+                      <label for="firstname1">Nombre:</label>
+                      <input type="text" id="firstname1" name="firstname1">
+                  </div>
+                  <div class="form-q f50">
+                      <label for="lastname">Apellido:</label>
+                      <input type="text" id="lastname1" name="lastname1">
+                  </div>
+              </div>
+              <div class="form-q f50">
+                <label for="tel">Teléfono:</label>
+                <input type="tel" id="tel1" name="tel1">
+              </div>
+            </div>
+            <p id="responseMessage1" style="display:none; color: red;">** Proporciona un teléfono válido para continuar.</p>  
+            <button class="otg-button-111" type="submit">Solicitar acceso</button>
+          </form>
         </section>
     </main>
     <footer class="footer-wrapper  opacity-change">
