--- a/index.html
+++ b/index.html
@@ -20,16 +20,57 @@
 <body class="body-2">
     <!-- Modal de Newsletter -->
     <main>
-        <nav class="nav-1111 navbar">
+        <nav class="nav-1111 navbar navbar-expand-lg">
             <div class="nav-1111-left">
                 <img src="./static/imgs/2 Isotype White.png" alt="OTG LOGO">
             </div>
-            <div class="nav-1111-right">
-              <a href="#squad">OTG Squad</a>
-                <a href="#marketing">OTG Marketing</a>
-                <a href="#listings">OTG Listings</a>
-                <a href="#skyslope">Documentos</a>
-                <a href="#splits">Team Meetings</a>
+            <div class="collapse navbar-collapse nav-1111-right" id="navbarNav">
+              <ul class="navbar-nav ms-auto">
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown3" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    OTG Squad
+                  </a>
+                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item" href="#socialmedia-tutorials">OTG x GPT</a></li>
+                    <li><a class="dropdown-item" href="#mailchimp-tutorials">Grupos de Whatsapp</a></li>
+                    <hr>
+                    <li><a class="dropdown-item" href="#firmas-personalizadas">Tutoriales de Skyslope</a></li>
+                  </ul>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    OTG Marketing
+                  </a>
+                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item" href="#firmas-personalizadas">Firmas personalizadas</a></li>
+                    <li><a class="dropdown-item" href="#marketing-material">Material de mercadeo de OTG</a></li>
+                    <hr>
+                    <li><a class="dropdown-item" href="#mailchimp-tutorials">Tutoriales de Mailchimp</a></li>
+                    <li><a class="dropdown-item" href="#socialmedia-tutorials">Tutoriales de redes sociales</a></li>
+                  </ul>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    OTG Listings
+                  </a>
+                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item" href="#mailchimp-tutorials">$uperventas Inteligentes</a></li>
+                    <li><a class="dropdown-item" href="#prompts">Prompts de AI</a></li>
+                    <li><a class="dropdown-item" href="https://www.oscarterangroup.com/featured-listings/">Listings activos de OTG</a></li>
+                  </ul>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#skyslope">Documentos</a>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Team Meetings
+                  </a>
+                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item" href="#">Ver biblioteca</a></li>
+                  </ul>
+                </li>
+              </ul>
             </div>
         </nav>
         <section class="sec1">
